--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <div class="relative bg-white overflow-hidden">
+  <div class="relative bg-white dark:bg-slate-900 overflow-hidden">
     <div class="max-w-7xl mx-auto">
-      <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-        <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
+      <div class="relative z-10 pb-8 bg-white dark:bg-slate-900 sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+        <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white dark:text-slate-900 transform translate-x-1/2"
           fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
           <polygon points="50,0 100,0 50,100 0,100" />
         </svg>
@@ -28,9 +28,9 @@
                 </div>
               </div>
               <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">About</a>
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Projects</a>
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
+                <a href="#" class="font-medium text-gray-500 dark:text-white hover:text-gray-900">About</a>
+                <a href="#" class="font-medium text-gray-500 dark:text-white hover:text-gray-900">Projects</a>
+                <a href="#" class="font-medium text-gray-500 dark:text-white hover:text-gray-900">Contact</a>
               </div>
             </nav>
           </div>
@@ -38,12 +38,12 @@
 
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
-            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white sm:text-5xl md:text-6xl">
               <span class="block xl:inline">Gilberto Alcantara</span>
               <span class="block text-indigo-600 xl:inline">@alcantaragil_</span>
             </h1>
             <p
-              class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+              class="mt-3 text-base text-gray-500 dark:text-white sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
               Fullstack web developer jr </p>
           </div>
         </main>
@@ -54,17 +54,17 @@
         src="gil.jpg" alt="">
     </div>
   </div>
-  <div class="bg-white">
+  <div class="bg-white dark:bg-slate-900">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Last YouTube Videos</h2>
+      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">Last YouTube Videos</h2>
       <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8" id="content">
         <!-- content -->
       </div>
     </div>
   </div>
-  <div class="bg-gray-50">
+  <div class="bg-gray-50 dark:bg-slate-900">
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-      <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+      <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-4xl">
         <span class="block">Contact</span>
         <span class="block text-indigo-600">keep in touch.</span>
       </h2>
